--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     - name: build
-      run: cd cloudflared/cmd/cloudflared && GOOS=linux GOARCH=mips GOMIPS=softfloat go build -v -mod=vendor
+      run: cd cmd/cloudflared && GOOS=linux GOARCH=mips GOMIPS=softfloat go build -v -mod=vendor
     - uses: actions/upload-artifact@v4
       with:
         name: cloudflared-mips
