--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.22.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Install Go
@@ -14,5 +14,9 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Test
-      run: make test
+    - name: build
+      run: cd cmd/cloudflared && GOOS=linux GOARCH=mips GOMIPS=softfloat go build -v -mod=vendor
+    - uses: actions/upload-artifact@v4
+      with:
+        name: cloudflared-mips
+        path: cmd/cloudflared/cloudflared
